--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>
-  {{title}}
-</h1>
+<h1>Grocery List</h1>
+<h2>{{title}}</h2>
+<a routerLink="/list">List</a>
+<a routerLink="/departments">Departments</a>
+<router-outlet></router-outlet>
