collapsed into single reducer

--- a/src/app/departments/department/department.component.html
+++ b/src/app/departments/department/department.component.html
@@ -1,2 +1,2 @@
-{{department.name}}
-<button type="button" (click)="remove(department)">Remove</button>
+{{department.key.name}}
+<button type="button" (click)="remove(department.key)">Remove</button>
