--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -1,7 +1,7 @@
 <input type="text" #deptName>
 <button type="button" (click)="add(deptName.value)">Add</button>
 <ul>
-  <li *ngFor="let department of departments | async">
+  <li *ngFor="let department of list | async | mapValues">
     <app-department [department]="department"></app-department>
   </li>
 </ul>
