stubbing out list

--- a/src/app/list/department-selector/department-selector.component.html
+++ b/src/app/list/department-selector/department-selector.component.html
@@ -1,3 +1,5 @@
-<p>
-  department-selector works!
-</p>
+<select [ngModel]="department" (ngModelChange)="select($event)">
+  <option *ngFor="let department of list | async | mapValues" [ngValue]="department.key" >
+    {{department?.key?.name}}
+  </option>
+</select>
