--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -1,3 +1,18 @@
-<p>
-  list works!
-</p>
+<div>
+  <app-department-selector (departmentSelected)="onDepartmentSelected($event)" [department]="department"></app-department-selector>
+</div>
+<div>
+  <input type="text" #itemName>
+  <button type="button" (click)="add(itemName.value)">Add</button>
+</div>
+<ul *ngFor="let dept of list | async | mapValues">
+  {{dept | json}}
+  <!--<ng-template *ngIf="department.key === department">-->
+    <!--<li *ngFor="let item of dept.val">
+      <app-item [item]="item"></app-item>
+    </li>-->
+  <!--</ng-template>-->
+</ul>
+{{department | json}}
+{{list | async | json}}
+{{calls}}
