removed department from item object implemented remove item

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -7,6 +7,6 @@
 </div>
 <ul>
   <li *ngFor="let item of theList">
-    <app-item [item]="item"></app-item>
+    <app-item [item]="item" [department]="department"></app-item>
   </li>
 </ul>
