--- a/src/app/list/item/item.component.html
+++ b/src/app/list/item/item.component.html
@@ -1,3 +1,12 @@
-<span [ngClass]="{'done': item.done}">{{item.name}}</span>
-<button type="button" (click)="remove(item)">Remove</button>
-<button type="button" (click)="toggle(item)">Toggle</button>
+<div [ngClass]="{'done': item.done}">
+    <span (click)="toggle(item)">
+        <button mat-icon-button>
+            <i *ngIf="!item.done" class="material-icons">check_box_outline_blank</i>
+            <i *ngIf="item.done" class="material-icons">check_box</i>
+        </button>
+        {{item.name}}
+    </span>
+    <button mat-icon-button (click)="remove(item)">
+        <i class="material-icons">delete</i>
+    </button>
+</div>
