Buttons for clear list and department.

--- a/src/app/list/list.component.html
+++ b/src/app/list/list.component.html
@@ -10,8 +10,8 @@
 </div>
 
 <div>
-  <button type="button" (click)="clear()">Clear List</button>
-  <button type="button" (click)="clearDepartment()">Clear Department</button>
+  <button type="button" (click)="clear()" mat-raised-button color="warn">Clear List</button>
+  <button type="button" (click)="clearDepartment()" mat-raised-button color="warn">Clear Department</button>
 </div>
 
 <mat-list>
