--- a/src/app/departments/departments.component.html
+++ b/src/app/departments/departments.component.html
@@ -1,9 +1,12 @@
-<div>
-  <input type="text" #deptName>
-  <button type="button" (click)="add(deptName.value)">Add</button>
-  <ul>
-    <li *ngFor="let department of list | async | mapValues">
-      <app-department [department]="department"></app-department>
-    </li>
-  </ul>
-</div>
+<mat-form-field>
+  <input matInput placeholder="Add new department ..." type="text" #deptName>
+</mat-form-field>
+<button mat-mini-fab color="primary" type="button" (click)="add(deptName.value)">
+  <i class="material-icons">add</i>
+</button>
+
+<ul>
+  <li *ngFor="let department of list | async | mapValues">
+    <app-department [department]="department"></app-department>
+  </li>
+</ul>
