List for departments.

--- a/src/app/departments/department/department.component.html
+++ b/src/app/departments/department/department.component.html
@@ -1,2 +1,4 @@
+<button mat-icon-button (click)="remove(department.key)">
+    <i class="material-icons">delete</i>
+</button>
 {{department.key.name}}
-<button type="button" (click)="remove(department.key)">Remove</button>
